Fix send button spacing

--- a/client/src/components/SendButton.module.css
+++ b/client/src/components/SendButton.module.css
@@ -1,3 +1,3 @@
-.button {
-  background-color: green;
+.buttonContainer {
+  margin: 1rem;
 }
